// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hydrateRows > should handle null values 1`] = `
UserEntity {
  "email": null,
  "id": "abc-123",
  "name": "Alice",
}
`;

exports[`hydrateRows > should hydrate multiple rows 1`] = `
[
  UserEntity {
    "email": "alice@test.com",
    "id": "abc-123",
    "name": "Alice",
  },
  UserEntity {
    "email": "bob@test.com",
    "id": "def-456",
    "name": "Bob",
  },
]
`;

exports[`hydrateRows > should hydrate single row 1`] = `
[
  UserEntity {
    "email": "alice@test.com",
    "id": "abc-123",
    "name": "Alice",
  },
]
`;

exports[`hydrateRows should handle null values 1`] = `
UserEntity {
  "email": null,
  "id": "abc-123",
  "name": "Alice",
}
`;

exports[`hydrateRows should hydrate multiple rows 1`] = `
[
  UserEntity {
    "email": "alice@test.com",
    "id": "abc-123",
    "name": "Alice",
  },
  UserEntity {
    "email": "bob@test.com",
    "id": "def-456",
    "name": "Bob",
  },
]
`;

exports[`hydrateRows should hydrate single row 1`] = `
[
  UserEntity {
    "email": "alice@test.com",
    "id": "abc-123",
    "name": "Alice",
  },
]
`;

exports[`hydrateRows — composite PK deduplication > groups rows by composite PK (tenantId + id) into a single root entity 1`] = `
TenantPostEntity {
  "id": "post-1",
  "posts": [
    PostEntity {
      "authorId": null,
      "id": "comment-1",
      "title": "Good read",
    },
    PostEntity {
      "authorId": null,
      "id": "comment-2",
      "title": "Great post",
    },
  ],
  "tenantId": "tenant-A",
  "title": "Multi Post",
}
`;

exports[`hydrateRows — composite PK deduplication > keeps two separate root entities when composite PKs differ 1`] = `
[
  TenantPostEntity {
    "id": "post-1",
    "posts": [
      PostEntity {
        "authorId": null,
        "id": "comment-1",
        "title": "Comment for A",
      },
    ],
    "tenantId": "tenant-A",
    "title": "Post A",
  },
  TenantPostEntity {
    "id": "post-1",
    "posts": [
      PostEntity {
        "authorId": null,
        "id": "comment-2",
        "title": "Comment for B",
      },
    ],
    "tenantId": "tenant-B",
    "title": "Post B",
  },
]
`;

exports[`hydrateRows — composite PK deduplication groups rows by composite PK (tenantId + id) into a single root entity 1`] = `
TenantPostEntity {
  "id": "post-1",
  "posts": [
    PostEntity {
      "authorId": null,
      "id": "comment-1",
      "title": "Good read",
    },
    PostEntity {
      "authorId": null,
      "id": "comment-2",
      "title": "Great post",
    },
  ],
  "tenantId": "tenant-A",
  "title": "Multi Post",
}
`;

exports[`hydrateRows — composite PK deduplication keeps two separate root entities when composite PKs differ 1`] = `
[
  TenantPostEntity {
    "id": "post-1",
    "posts": [
      PostEntity {
        "authorId": null,
        "id": "comment-1",
        "title": "Comment for A",
      },
    ],
    "tenantId": "tenant-A",
    "title": "Post A",
  },
  TenantPostEntity {
    "id": "post-1",
    "posts": [
      PostEntity {
        "authorId": null,
        "id": "comment-2",
        "title": "Comment for B",
      },
    ],
    "tenantId": "tenant-B",
    "title": "Post B",
  },
]
`;

exports[`hydrateRows — sortByOrderBy via OneToMany includes > sorts OneToMany collection by orderBy ASC when items arrive in reverse order 1`] = `
AuthorEntity {
  "id": "author-1",
  "name": "Alice",
  "posts": [
    PostEntity {
      "authorId": "author-1",
      "id": "post-a",
      "title": "Apple",
    },
    PostEntity {
      "authorId": "author-1",
      "id": "post-c",
      "title": "Mango",
    },
    PostEntity {
      "authorId": "author-1",
      "id": "post-b",
      "title": "Zebra",
    },
  ],
}
`;

exports[`hydrateRows — sortByOrderBy via OneToMany includes sorts OneToMany collection by orderBy ASC when items arrive in reverse order 1`] = `
AuthorEntity {
  "id": "author-1",
  "name": "Alice",
  "posts": [
    PostEntity {
      "authorId": "author-1",
      "id": "post-a",
      "title": "Apple",
    },
    PostEntity {
      "authorId": "author-1",
      "id": "post-c",
      "title": "Mango",
    },
    PostEntity {
      "authorId": "author-1",
      "id": "post-b",
      "title": "Zebra",
    },
  ],
}
`;

exports[`hydrateRows — with includes > ManyToOne include: hydrates a single related entity per root row 1`] = `
PostEntity {
  "author": AuthorEntity {
    "id": "author-1",
    "name": "Alice",
  },
  "authorId": "author-1",
  "id": "post-1",
  "title": "Hello World",
}
`;

exports[`hydrateRows — with includes > ManyToOne include: null foreign PK (LEFT JOIN miss) — scalar relation is null 1`] = `
PostEntity {
  "author": null,
  "authorId": null,
  "id": "post-1",
  "title": "Orphaned Post",
}
`;

exports[`hydrateRows — with includes > OneToMany include: deduplicates root entity and aggregates related collection 1`] = `
AuthorEntity {
  "id": "author-1",
  "name": "Alice",
  "posts": [
    PostEntity {
      "authorId": "author-1",
      "id": "post-1",
      "title": "First Post",
    },
    PostEntity {
      "authorId": "author-1",
      "id": "post-2",
      "title": "Second Post",
    },
  ],
}
`;

exports[`hydrateRows — with includes > OneToMany include: null foreign PK row (LEFT JOIN miss) — collection is empty array 1`] = `
AuthorEntity {
  "id": "author-1",
  "name": "Alice",
  "posts": [],
}
`;

exports[`hydrateRows — with includes > inc.select restriction: only selected fields and PKs appear on the related entity 1`] = `
AuthorEntity {
  "id": "author-1",
  "name": "Alice",
  "posts": [
    PostEntity {
      "authorId": null,
      "id": "post-1",
      "title": "Hello",
    },
  ],
}
`;

exports[`hydrateRows — with includes ManyToOne include: hydrates a single related entity per root row 1`] = `
PostEntity {
  "author": AuthorEntity {
    "id": "author-1",
    "name": "Alice",
  },
  "authorId": "author-1",
  "id": "post-1",
  "title": "Hello World",
}
`;

exports[`hydrateRows — with includes ManyToOne include: null foreign PK (LEFT JOIN miss) — scalar relation is null 1`] = `
PostEntity {
  "author": null,
  "authorId": null,
  "id": "post-1",
  "title": "Orphaned Post",
}
`;

exports[`hydrateRows — with includes OneToMany include: deduplicates root entity and aggregates related collection 1`] = `
AuthorEntity {
  "id": "author-1",
  "name": "Alice",
  "posts": [
    PostEntity {
      "authorId": "author-1",
      "id": "post-1",
      "title": "First Post",
    },
    PostEntity {
      "authorId": "author-1",
      "id": "post-2",
      "title": "Second Post",
    },
  ],
}
`;

exports[`hydrateRows — with includes OneToMany include: null foreign PK row (LEFT JOIN miss) — collection is empty array 1`] = `
AuthorEntity {
  "id": "author-1",
  "name": "Alice",
  "posts": [],
}
`;

exports[`hydrateRows — with includes inc.select restriction: only selected fields and PKs appear on the related entity 1`] = `
AuthorEntity {
  "id": "author-1",
  "name": "Alice",
  "posts": [
    PostEntity {
      "authorId": null,
      "id": "post-1",
      "title": "Hello",
    },
  ],
}
`;
